# GazeTrackingOfflineProcessing

./: CMakeLists.txt  Constants.h  Converting.cpp  Logging.h  PostProcessing.cpp  ProcessScreenRecording.cpp  ProcessVideoRecording.cpp  README.md  SettingsParser.cpp
EyeTabTracker/: GazeSettingsEyeTab.cpp  GazeSettingsEyeTab.h  GazeTrackerEyeTab.cpp  GazeTrackerEyeTab.h
EyeTabTracker/src_eyetab/: gaze_system.h
licenses/: LICENSE_EYETAB.txt
